[ery] Remove GetApp and UpdateApp from AppService
