# api/ery/app.pb.go
@@ -433,44 +433,41 @@ func init() {
 func init() { proto.RegisterFile("app.proto", fileDescriptor_e0f9056a14b86d47) }
 
 var fileDescriptor_e0f9056a14b86d47 = []byte{
-	// 581 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x9c, 0x54, 0xcf, 0x6e, 0xd3, 0x4e,
-	0x10, 0xfe, 0x39, 0xce, 0x9f, 0x66, 0x7e, 0x75, 0x70, 0x57, 0xa2, 0x32, 0x2e, 0x94, 0xca, 0xa5,
-	0x28, 0x20, 0xb4, 0x96, 0xc2, 0x81, 0x7f, 0xa7, 0xd0, 0x22, 0x84, 0x84, 0x50, 0x64, 0xa8, 0x84,
-	0xe0, 0x10, 0x39, 0xc9, 0xe2, 0x5a, 0x24, 0xde, 0x61, 0x77, 0x53, 0x12, 0x21, 0x2e, 0xbc, 0x02,
-	0x4f, 0xc1, 0xab, 0x70, 0xe5, 0xcc, 0x8d, 0x07, 0x41, 0xbb, 0x8e, 0xd3, 0xc6, 0x4d, 0x2f, 0xdc,
-	0x76, 0xbf, 0xf9, 0xe6, 0x9b, 0x99, 0x6f, 0xa4, 0x81, 0x66, 0x8c, 0x48, 0x51, 0x70, 0xc5, 0xc9,
-	0xa6, 0x14, 0xa7, 0x43, 0x9a, 0x8c, 0x67, 0x94, 0x89, 0xb9, 0x7f, 0x3d, 0xe1, 0x3c, 0x19, 0xb3,
-	0x30, 0xc6, 0x34, 0x8c, 0xb3, 0x8c, 0xab, 0x58, 0xa5, 0x3c, 0x93, 0x39, 0xd7, 0xdf, 0x59, 0x44,
-	0xcd, 0x6f, 0x30, 0xfd, 0x10, 0xb2, 0x09, 0xaa, 0x79, 0x1e, 0x0c, 0x7e, 0x57, 0xc0, 0xee, 0x22,
-	0x92, 0xab, 0x50, 0x8f, 0x11, 0xfb, 0xe9, 0xc8, 0xb3, 0xf6, 0xac, 0x76, 0x33, 0xaa, 0xc5, 0x88,
-	0x2f, 0x46, 0x84, 0x40, 0x35, 0x8b, 0x27, 0xcc, 0xab, 0x18, 0xd0, 0xbc, 0x89, 0x0f, 0x1b, 0x27,
-	0x5c, 0x2a, 0x83, 0xdb, 0x06, 0x5f, 0xfe, 0x49, 0x0b, 0x2a, 0x29, 0x7a, 0x55, 0x83, 0x56, 0x52,
-	0x24, 0xf7, 0xa0, 0x86, 0x5c, 0x28, 0xe9, 0xd5, 0xf6, 0xec, 0xf6, 0xff, 0x9d, 0x6d, 0x7a, 0xbe,
-	0x6f, 0xda, 0x45, 0xa4, 0x3d, 0x2e, 0x54, 0x94, 0x93, 0xc8, 0x01, 0xb4, 0x50, 0xf0, 0xd9, 0xbc,
-	0x2f, 0xd8, 0xa7, 0x69, 0x2a, 0xd8, 0xc8, 0xab, 0xef, 0x59, 0xed, 0x8d, 0xc8, 0x31, 0x68, 0xb4,
-	0x00, 0xfd, 0x1f, 0x16, 0x54, 0x75, 0x1a, 0x79, 0x08, 0x8d, 0x8c, 0xa9, 0xcf, 0x5c, 0x7c, 0x34,
-	0x5d, 0xb7, 0x3a, 0xbb, 0xeb, 0xf5, 0xe9, 0xab, 0x9c, 0x15, 0x15, 0x74, 0x5d, 0x49, 0xd7, 0x60,
-	0x52, 0xb1, 0x51, 0x5f, 0x17, 0x37, 0x13, 0x3a, 0x91, 0xb3, 0x44, 0x4d, 0x81, 0x7d, 0x70, 0x62,
-	0x29, 0xd3, 0x24, 0x2b, 0x58, 0xb6, 0x61, 0x6d, 0x16, 0xa0, 0x26, 0x05, 0x3b, 0xd0, 0x58, 0xe8,
-	0x93, 0x06, 0xd8, 0x6f, 0x0e, 0x7b, 0xee, 0x7f, 0xfa, 0x71, 0x7c, 0xd4, 0x73, 0xad, 0x60, 0x0b,
-	0xae, 0xbc, 0x4c, 0xa5, 0xea, 0x22, 0xca, 0x28, 0x97, 0x0e, 0x1e, 0x81, 0x7b, 0x06, 0x49, 0xe4,
-	0x99, 0x64, 0xe4, 0x00, 0xaa, 0x31, 0xa2, 0xf4, 0x2c, 0x63, 0xd3, 0xd6, 0x85, 0x31, 0x22, 0x13,
-	0x0e, 0x6e, 0x83, 0xf3, 0x9c, 0xe9, 0xcc, 0x85, 0xd6, 0x25, 0x6b, 0x0b, 0x1e, 0x80, 0x7b, 0x28,
-	0x58, 0xac, 0xd8, 0x39, 0xea, 0x3e, 0xd8, 0x31, 0xa2, 0xe1, 0xad, 0xad, 0xa0, 0xa3, 0x3a, 0xf1,
-	0x18, 0x47, 0xff, 0x90, 0x78, 0x07, 0xdc, 0x23, 0x36, 0x66, 0x2b, 0x89, 0xeb, 0x9b, 0xeb, 0xfc,
-	0xb4, 0x01, 0xba, 0x88, 0xaf, 0x99, 0x38, 0x4d, 0x87, 0x8c, 0xbc, 0x85, 0x8d, 0xc2, 0x0e, 0x72,
-	0x63, 0x55, 0xbd, 0xe4, 0x9c, 0xbf, 0x7b, 0x59, 0x38, 0x77, 0x31, 0x70, 0xbe, 0xfd, 0xfa, 0xf3,
-	0xbd, 0xd2, 0x20, 0xb5, 0x50, 0xbb, 0x45, 0x7a, 0x50, 0xcf, 0xdd, 0x22, 0x3b, 0xab, 0x89, 0x2b,
-	0x1e, 0xfa, 0x17, 0x47, 0x0a, 0xb6, 0x8d, 0x90, 0x4b, 0x5a, 0x46, 0x28, 0xfc, 0x92, 0x8f, 0xf1,
-	0x95, 0x44, 0xd0, 0x5c, 0xfa, 0x4a, 0x4a, 0xdd, 0x94, 0x0d, 0x5f, 0xa7, 0x4b, 0x8c, 0xee, 0x66,
-	0x90, 0x37, 0xf8, 0x58, 0x3b, 0x47, 0xfa, 0xd0, 0x5c, 0x5a, 0x5e, 0xd6, 0x2c, 0xef, 0x62, 0x9d,
-	0xe6, 0x4d, 0xa3, 0x79, 0xad, 0x43, 0xce, 0x7a, 0xa5, 0x8b, 0x7e, 0xf3, 0x02, 0xef, 0xa1, 0xb9,
-	0x5c, 0x4d, 0xb9, 0x40, 0x79, 0x67, 0xfe, 0x36, 0xcd, 0xaf, 0x05, 0x2d, 0xae, 0x05, 0x7d, 0xa6,
-	0xaf, 0x45, 0xe1, 0xc8, 0xdd, 0x92, 0x23, 0x4f, 0x6f, 0xbd, 0x0b, 0x92, 0x54, 0x9d, 0x4c, 0x07,
-	0x74, 0xc8, 0x27, 0xa1, 0xd6, 0x0e, 0x93, 0xf1, 0xcc, 0x5c, 0x22, 0x26, 0xe6, 0x4f, 0x98, 0x98,
-	0xf7, 0x71, 0x30, 0xa8, 0x1b, 0xb5, 0xfb, 0x7f, 0x03, 0x00, 0x00, 0xff, 0xff, 0x96, 0x16, 0xd3,
-	0x78, 0xc2, 0x04, 0x00, 0x00,
+	// 536 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x9c, 0x53, 0x4d, 0x6f, 0xd3, 0x40,
+	0x10, 0xc5, 0x76, 0x3e, 0x87, 0x38, 0xb8, 0x2b, 0x11, 0x59, 0x2e, 0x54, 0x91, 0x4b, 0x51, 0x40,
+	0xc8, 0x96, 0xc2, 0x81, 0xaf, 0x53, 0x68, 0x11, 0x42, 0x42, 0x28, 0x32, 0x54, 0x42, 0x70, 0x88,
+	0x36, 0xc9, 0xe2, 0x5a, 0x24, 0xde, 0x61, 0x77, 0x53, 0x12, 0x21, 0x2e, 0xfc, 0x05, 0x0e, 0xfc,
+	0x06, 0x7e, 0x0f, 0x67, 0x6e, 0xfc, 0x10, 0xb4, 0xeb, 0x24, 0xb4, 0x69, 0x7a, 0xe1, 0xe6, 0x7d,
+	0xf3, 0xde, 0x9b, 0x99, 0x67, 0x0d, 0xd4, 0x29, 0x62, 0x84, 0x82, 0x2b, 0x4e, 0x1a, 0x52, 0x9c,
+	0x8e, 0xa2, 0x74, 0x32, 0x8f, 0x98, 0x58, 0x04, 0x37, 0x52, 0xce, 0xd3, 0x09, 0x8b, 0x29, 0x66,
+	0x31, 0xcd, 0x73, 0xae, 0xa8, 0xca, 0x78, 0x2e, 0x0b, 0x6e, 0xb0, 0xbb, 0xac, 0x9a, 0xd7, 0x70,
+	0xf6, 0x21, 0x66, 0x53, 0x54, 0x8b, 0xa2, 0x18, 0xfe, 0xb6, 0xc1, 0xe9, 0x21, 0x92, 0xeb, 0x50,
+	0xa1, 0x88, 0x83, 0x6c, 0xec, 0x5b, 0x6d, 0xab, 0x53, 0x4f, 0xca, 0x14, 0xf1, 0xc5, 0x98, 0x10,
+	0x28, 0xe5, 0x74, 0xca, 0x7c, 0xdb, 0x80, 0xe6, 0x9b, 0x04, 0x50, 0x3b, 0xe1, 0x52, 0x19, 0xdc,
+	0x31, 0xf8, 0xfa, 0x4d, 0x9a, 0x60, 0x67, 0xe8, 0x97, 0x0c, 0x6a, 0x67, 0x48, 0xee, 0x41, 0x19,
+	0xb9, 0x50, 0xd2, 0x2f, 0xb7, 0x9d, 0xce, 0xd5, 0x6e, 0x2b, 0x3a, 0x3b, 0x77, 0xd4, 0x43, 0x8c,
+	0xfa, 0x5c, 0xa8, 0xa4, 0x20, 0x91, 0x03, 0x68, 0xa2, 0xe0, 0xf3, 0xc5, 0x40, 0xb0, 0x4f, 0xb3,
+	0x4c, 0xb0, 0xb1, 0x5f, 0x69, 0x5b, 0x9d, 0x5a, 0xe2, 0x1a, 0x34, 0x59, 0x82, 0xc1, 0x4f, 0x0b,
+	0x4a, 0x5a, 0x46, 0x1e, 0x42, 0x35, 0x67, 0xea, 0x33, 0x17, 0x1f, 0xcd, 0xd4, 0xcd, 0xee, 0xde,
+	0x76, 0xff, 0xe8, 0x55, 0xc1, 0x4a, 0x56, 0x74, 0xdd, 0x49, 0xf7, 0x60, 0x52, 0xb1, 0xf1, 0x40,
+	0x37, 0x37, 0x1b, 0xba, 0x89, 0xbb, 0x46, 0x4d, 0x83, 0x7d, 0x70, 0xa9, 0x94, 0x59, 0x9a, 0xaf,
+	0x58, 0x8e, 0x61, 0x35, 0x56, 0xa0, 0x26, 0x85, 0xbb, 0x50, 0x5d, 0xfa, 0x93, 0x2a, 0x38, 0x6f,
+	0x0e, 0xfb, 0xde, 0x15, 0xfd, 0x71, 0x7c, 0xd4, 0xf7, 0xac, 0x70, 0x07, 0xae, 0xbd, 0xcc, 0xa4,
+	0xea, 0x21, 0xca, 0xa4, 0xb0, 0x0e, 0x1f, 0x81, 0xf7, 0x0f, 0x92, 0xc8, 0x73, 0xc9, 0xc8, 0x01,
+	0x94, 0x28, 0xa2, 0xf4, 0x2d, 0x13, 0xd3, 0xce, 0x85, 0x35, 0x12, 0x53, 0x0e, 0x6f, 0x83, 0xfb,
+	0x9c, 0x69, 0xe5, 0xd2, 0xeb, 0x92, 0xdf, 0x16, 0x3e, 0x00, 0xef, 0x50, 0x30, 0xaa, 0xd8, 0x19,
+	0xea, 0x3e, 0x38, 0x14, 0xd1, 0xf0, 0xb6, 0x76, 0xd0, 0x55, 0x2d, 0x3c, 0xc6, 0xf1, 0x7f, 0x08,
+	0xef, 0x80, 0x77, 0xc4, 0x26, 0xec, 0x9c, 0x70, 0xfb, 0x70, 0xdd, 0x1f, 0x36, 0x40, 0x0f, 0xf1,
+	0x35, 0x13, 0xa7, 0xd9, 0x88, 0x91, 0xb7, 0x50, 0x5b, 0xc5, 0x41, 0x6e, 0x9e, 0x77, 0xdf, 0x48,
+	0x2e, 0xd8, 0xbb, 0xac, 0x5c, 0xa4, 0x18, 0xba, 0xdf, 0x7e, 0xfd, 0xf9, 0x6e, 0x57, 0x49, 0x39,
+	0xd6, 0x69, 0x91, 0x04, 0xea, 0xeb, 0x14, 0xc8, 0x86, 0x76, 0x33, 0x9e, 0xe0, 0xe2, 0x62, 0x21,
+	0x31, 0x76, 0x8d, 0xb0, 0xb0, 0x7b, 0xac, 0xf7, 0x24, 0xef, 0xa1, 0xbe, 0xde, 0x73, 0xd3, 0x73,
+	0x33, 0x80, 0xa0, 0x15, 0x15, 0xa7, 0x17, 0xad, 0x4e, 0x2f, 0x7a, 0xa6, 0x4f, 0x2f, 0x6c, 0x19,
+	0x63, 0xef, 0x6e, 0xd3, 0x18, 0xc7, 0x5f, 0x8a, 0x94, 0xbe, 0x3e, 0xbd, 0xf5, 0x2e, 0x4c, 0x33,
+	0x75, 0x32, 0x1b, 0x46, 0x23, 0x3e, 0x8d, 0xb5, 0x77, 0x9c, 0x4e, 0xe6, 0xe6, 0xac, 0x99, 0x58,
+	0x3c, 0x61, 0x62, 0x31, 0xc0, 0xe1, 0xb0, 0x62, 0xdc, 0xee, 0xff, 0x0d, 0x00, 0x00, 0xff, 0xff,
+	0xb7, 0xf2, 0x46, 0x1e, 0x0f, 0x04, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -486,9 +483,7 @@ const _ = grpc.SupportPackageIsVersion4
 // For semantics around ctx use and closing/ending streaming RPCs, please refer to https://godoc.org/google.golang.org/grpc#ClientConn.NewStream.
 type AppServiceClient interface {
 	ListApps(ctx context.Context, in *ListAppsRequest, opts ...grpc.CallOption) (*ListAppsResponse, error)
-	GetApp(ctx context.Context, in *GetAppRequest, opts ...grpc.CallOption) (*App, error)
 	CreateApp(ctx context.Context, in *CreateAppRequest, opts ...grpc.CallOption) (*App, error)
-	UpdateApp(ctx context.Context, in *UpdateAppRequest, opts ...grpc.CallOption) (*App, error)
 	DeleteApp(ctx context.Context, in *DeleteAppRequest, opts ...grpc.CallOption) (*empty.Empty, error)
 }
 
@@ -509,27 +504,9 @@ func (c *appServiceClient) ListApps(ctx context.Context, in *ListAppsRequest, op
 	return out, nil
 }
 
-func (c *appServiceClient) GetApp(ctx context.Context, in *GetAppRequest, opts ...grpc.CallOption) (*App, error) {
-	out := new(App)
-	err := c.cc.Invoke(ctx, "/srvc.glx.ery.AppService/GetApp", in, out, opts...)
-	if err != nil {
-		return nil, err
-	}
-	return out, nil
-}
-
 func (c *appServiceClient) CreateApp(ctx context.Context, in *CreateAppRequest, opts ...grpc.CallOption) (*App, error) {
 	out := new(App)
 	err := c.cc.Invoke(ctx, "/srvc.glx.ery.AppService/CreateApp", in, out, opts...)
-	if err != nil {
-		return nil, err
-	}
-	return out, nil
-}
-
-func (c *appServiceClient) UpdateApp(ctx context.Context, in *UpdateAppRequest, opts ...grpc.CallOption) (*App, error) {
-	out := new(App)
-	err := c.cc.Invoke(ctx, "/srvc.glx.ery.AppService/UpdateApp", in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -548,9 +525,7 @@ func (c *appServiceClient) DeleteApp(ctx context.Context, in *DeleteAppRequest, 
 // AppServiceServer is the server API for AppService service.
 type AppServiceServer interface {
 	ListApps(context.Context, *ListAppsRequest) (*ListAppsResponse, error)
-	GetApp(context.Context, *GetAppRequest) (*App, error)
 	CreateApp(context.Context, *CreateAppRequest) (*App, error)
-	UpdateApp(context.Context, *UpdateAppRequest) (*App, error)
 	DeleteApp(context.Context, *DeleteAppRequest) (*empty.Empty, error)
 }
 
@@ -576,24 +551,6 @@ func _AppService_ListApps_Handler(srv interface{}, ctx context.Context, dec func
 	return interceptor(ctx, in, info, handler)
 }
 
-func _AppService_GetApp_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(GetAppRequest)
-	if err := dec(in); err != nil {
-		return nil, err
-	}
-	if interceptor == nil {
-		return srv.(AppServiceServer).GetApp(ctx, in)
-	}
-	info := &grpc.UnaryServerInfo{
-		Server:     srv,
-		FullMethod: "/srvc.glx.ery.AppService/GetApp",
-	}
-	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(AppServiceServer).GetApp(ctx, req.(*GetAppRequest))
-	}
-	return interceptor(ctx, in, info, handler)
-}
-
 func _AppService_CreateApp_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
 	in := new(CreateAppRequest)
 	if err := dec(in); err != nil {
@@ -608,24 +565,6 @@ func _AppService_CreateApp_Handler(srv interface{}, ctx context.Context, dec fun
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(AppServiceServer).CreateApp(ctx, req.(*CreateAppRequest))
-	}
-	return interceptor(ctx, in, info, handler)
-}
-
-func _AppService_UpdateApp_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(UpdateAppRequest)
-	if err := dec(in); err != nil {
-		return nil, err
-	}
-	if interceptor == nil {
-		return srv.(AppServiceServer).UpdateApp(ctx, in)
-	}
-	info := &grpc.UnaryServerInfo{
-		Server:     srv,
-		FullMethod: "/srvc.glx.ery.AppService/UpdateApp",
-	}
-	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(AppServiceServer).UpdateApp(ctx, req.(*UpdateAppRequest))
 	}
 	return interceptor(ctx, in, info, handler)
 }
@@ -657,16 +596,8 @@ var _AppService_serviceDesc = grpc.ServiceDesc{
 			Handler:    _AppService_ListApps_Handler,
 		},
 		{
-			MethodName: "GetApp",
-			Handler:    _AppService_GetApp_Handler,
-		},
-		{
 			MethodName: "CreateApp",
 			Handler:    _AppService_CreateApp_Handler,
-		},
-		{
-			MethodName: "UpdateApp",
-			Handler:    _AppService_UpdateApp_Handler,
 		},
 		{
 			MethodName: "DeleteApp",
